// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.gravitalia.squid.squid";
option java_outer_classname = "SquidProto";

package squid;

// The crawler service definition.
service Squid {
  // Sends a request for index a message
  rpc SquidIndex (SquidRequest) returns (SquidMessage) {}
  rpc SquidGet (SquidGetRequest) returns (SquidReply) {}
}

// The request message containing the message/description
message SquidRequest {
  string message = 1;
}

// The get request
message SquidGetRequest {}

// The response for the get request
message SquidReply {
  repeated SquidItem items = 1;
}

// Define how is the items
message SquidItem {
  int32 rank = 1;
  string word = 2;
}

// The reponse for a basic message
message SquidMessage {
  string message = 1;
  bool error = 2;
}
